--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Hello JavaScript!</h1>
     
+    <input id="number">
+    <button onclick="evenOrOdd()">Run it!</button>
+
+
     <script src="main.js"></script>
 </body>
 </html>
